# headless_terrain_renderer

./: CMakeLists.txt  README.md
lib/: cuda_kernels.lib
src/: main.cpp  rgb.cpp
